# Nonprehensile_Transportation

./: README.md
Experiments/CentralControl/data/mpc_1/: arm_l_1745164397.txt  arm_r_1745164397.txt
Experiments/CentralControl/data/mpc_2_025/: arm_l_1745167671.txt  arm_r_1745167671.txt
Experiments/CentralControl/data/mpc_2_05/: arm_l_1745166433.txt  arm_r_1745166433.txt
Experiments/CentralControl/data/pid_1/: arm_l_1745155533.txt  arm_r_1745155533.txt
Experiments/CentralControl/data/pid_2/: arm_l_1745162200.txt  arm_r_1745162200.txt
Experiments/CentralControl/include/: common.h  manipulator.hpp  manipulators.hpp
Experiments/CentralControl/src/: common.cpp  mpc.cpp  pid.cpp
Experiments/LeftCamera/: CMakeLists.txt  camera.hpp  leftCamera.cpp
Experiments/RightCamera/: camera.hpp  rightCamera.cpp
Experiments/centralControl/: CMakeLists.txt
Simulations/: CMakeLists.txt  README.md
Simulations/data/: mpc_1arm_1.txt  mpc_2arms_1_left.txt  mpc_2arms_1_right.txt  pid_1arm_0.txt  pid_1arm_1.txt  pid_2arms_0_left.txt  pid_2arms_0_right.txt  pid_2arms_1_left.txt  pid_2arms_1_right.txt
Simulations/docs/: simulation_1arm.ttt  simulation_2arms.ttt
Simulations/include/: common.h  manipulator.hpp  manipulators.hpp
Simulations/src/: common.cpp  mpc_1arm.cpp  mpc_2arms.cpp  pid_1arm.cpp  pid_2arms.cpp
experiments/: CMakeLists.txt
experiments/controllers/: CMakeLists.txt
experiments/controllers/include/: common.h  pbc_dual.hpp  pbc_side.hpp  pid_dual.hpp  pid_side.hpp
experiments/controllers/src/: mpc_dual.cpp  mpc_left.cpp  mpc_right.cpp  pbc_dual.cpp  pbc_left.cpp  pbc_right.cpp  pid_dual.cpp  pid_left.cpp  pid_right.cpp
experiments/data/: mpc_dual_arm_l_1746358254.txt  mpc_dual_arm_l_1746360587.txt  mpc_dual_arm_l_1746361700.txt  mpc_dual_arm_r_1746358254.txt  mpc_dual_arm_r_1746360587.txt  mpc_dual_arm_r_1746361700.txt  mpc_left_arm_l_1746358888.txt  mpc_left_arm_l_1746361107.txt  mpc_left_arm_l_1746362153.txt  mpc_right_arm_r_1746358890.txt  mpc_right_arm_r_1746361108.txt  mpc_right_arm_r_1746362156.txt  pid_dual_arm_l_1746356925.txt  pid_dual_arm_r_1746356925.txt  pid_left_arm_l_1746357616.txt  pid_right_arm_r_1746357618.txt
experiments/include/: common.h  manipulator.hpp  mpc_dual.hpp  mpc_side.hpp
experiments/leftCamera/: camera.hpp  leftCamera.cpp
experiments/rightCamera/: CMakeLists.txt  camera.hpp  rightCamera.cpp
experiments/src/: mpc_dual.cpp  mpc_left.cpp
nonprehensile_mpc/: CMakeLists.txt
nonprehensile_mpc/docs/: simulation_1arm.ttt  simulation_2arms.ttt
nonprehensile_mpc/include/: common.h  manipulator.hpp  manipulators.hpp
nonprehensile_mpc/src/: common.cpp  mpc_1arm.cpp  mpc_2arms.cpp  pid_1arm.cpp  pid_2arms.cpp
simulations/: CMakeLists.txt
simulations/data/: README.md  mpc_dual_arm_l_1745927808.txt  mpc_dual_arm_l_1746028613.txt  mpc_dual_arm_l_1746032242.txt  mpc_dual_arm_l_1746033786.txt  mpc_dual_arm_l_1746034160.txt  mpc_dual_arm_l_1746108905.txt  mpc_dual_arm_r_1745927808.txt  mpc_dual_arm_r_1746028613.txt  mpc_dual_arm_r_1746032242.txt  mpc_dual_arm_r_1746033786.txt  mpc_dual_arm_r_1746034160.txt  mpc_dual_arm_r_1746108905.txt  mpc_left_arm_l_1745927926.txt  mpc_left_arm_l_1746028373.txt  mpc_left_arm_l_1746032392.txt  mpc_left_arm_l_1746033964.txt  mpc_left_arm_l_1746034317.txt  mpc_left_arm_l_1746109085.txt  mpc_right_arm_r_1745927930.txt  mpc_right_arm_r_1746028376.txt  mpc_right_arm_r_1746032395.txt  mpc_right_arm_r_1746033966.txt  mpc_right_arm_r_1746034321.txt  mpc_right_arm_r_1746109086.txt  pid_dual_arm_l_1746108837.txt  pid_dual_arm_r_1746108837.txt  pid_left_arm_l_1746109015.txt  pid_right_arm_r_1746109016.txt
simulations/docs/: simulation_1arm.ttt  simulation_2arms.ttt
simulations/include/: common.h  manipulator.hpp  manipulator_dual.hpp  manipulator_side.hpp  mpc_dual.hpp  mpc_side.hpp  pbc_dual.hpp  pbc_side.hpp  pid_dual.hpp  pid_side.hpp
simulations/src/: mpc_dual.cpp  mpc_left.cpp  mpc_right.cpp  pbc_dual.cpp  pbc_left.cpp  pbc_right.cpp  pid_dual.cpp  pid_left.cpp  pid_right.cpp
